build.log
gcc -m32 -ffreestanding -fno-pie -fno-stack-protector -nostdlib -fno-builtin -fno-pic -mno-red-zone -Wall -Wextra -std=c99 -g -I . -I include -I include/arch/x86 -I include/kernel -I . -c fs/fat32.c -o build/obj/fs/fat32.o
In file included from fs/fat32.c:7:
fs/../include/kernel/fs.h:104: warning: "O_ACCMODE" redefined
  104 | #define O_ACCMODE   00000003
      | 
In file included from fs/fat32.c:6:
fs/../include/kernel/vfs.h:152: note: this is the location of the previous definition
  152 | #define O_ACCMODE   0x0003
      | 
fs/../include/kernel/fs.h:105: warning: "O_RDONLY" redefined
  105 | #define O_RDONLY    00000000
      | 
fs/../include/kernel/vfs.h:149: note: this is the location of the previous definition
  149 | #define O_RDONLY    0x0000
      | 
fs/../include/kernel/fs.h:106: warning: "O_WRONLY" redefined
  106 | #define O_WRONLY    00000001
      | 
fs/../include/kernel/vfs.h:150: note: this is the location of the previous definition
  150 | #define O_WRONLY    0x0001
      | 
fs/../include/kernel/fs.h:107: warning: "O_RDWR" redefined
  107 | #define O_RDWR      00000002
      | 
fs/../include/kernel/vfs.h:151: note: this is the location of the previous definition
  151 | #define O_RDWR      0x0002
      | 
fs/../include/kernel/fs.h:108: warning: "O_CREAT" redefined
  108 | #define O_CREAT     00000100  // Not fcntl
      | 
fs/../include/kernel/vfs.h:153: note: this is the location of the previous definition
  153 | #define O_CREAT     0x0100
      | 
fs/../include/kernel/fs.h:109: warning: "O_EXCL" redefined
  109 | #define O_EXCL      00000200  // Not fcntl
      | 
fs/../include/kernel/vfs.h:154: note: this is the location of the previous definition
  154 | #define O_EXCL      0x0200
      | 
fs/../include/kernel/fs.h:111: warning: "O_TRUNC" redefined
  111 | #define O_TRUNC     00001000  // Not fcntl
      | 
fs/../include/kernel/vfs.h:155: note: this is the location of the previous definition
  155 | #define O_TRUNC     0x0400
      | 
fs/../include/kernel/fs.h:112: warning: "O_APPEND" redefined
  112 | #define O_APPEND    00002000
      | 
fs/../include/kernel/vfs.h:156: note: this is the location of the previous definition
  156 | #define O_APPEND    0x0800
      | 
fs/fat32.c: In function ‘read_sectors’:
fs/fat32.c:128:12: warning: implicit declaration of function ‘ata_read28_lba’ [-Wimplicit-function-declaration]
  128 |     return ata_read28_lba(lba, num_sectors, buffer);
      |            ^~~~~~~~~~~~~~
fs/fat32.c: In function ‘fat32_readdir’:
fs/fat32.c:526:27: error: ‘vfs_dirent_t’ {aka ‘struct vfs_dirent’} has no member named ‘d_name’; did you mean ‘name’?
  526 |             strncpy(entry.d_name, name, VFS_NAME_MAX - 1);
      |                           ^~~~~~
      |                           name
fs/fat32.c:527:19: error: ‘vfs_dirent_t’ {aka ‘struct vfs_dirent’} has no member named ‘d_name’; did you mean ‘name’?
  527 |             entry.d_name[VFS_NAME_MAX - 1] = '\0';
      |                   ^~~~~~
      |                   name
fs/fat32.c:528:18: error: ‘vfs_dirent_t’ {aka ‘struct vfs_dirent’} has no member named ‘d_ino’
  528 |             entry.d_ino = (de->first_cluster_high << 16) | de->first_cluster_low;
      |                  ^
fs/fat32.c:535:11: error: ‘vfs_dirent_t’ {aka ‘struct vfs_dirent’} has no member named ‘d_name’; did you mean ‘name’?
  535 |     entry.d_name[0] = '\0';
      |           ^~~~~~
      |           name
fs/fat32.c:536:10: error: ‘vfs_dirent_t’ {aka ‘struct vfs_dirent’} has no member named ‘d_ino’
  536 |     entry.d_ino = 0;
      |          ^
fs/fat32.c: In function ‘fat32_finddir’:
fs/fat32.c:599:26: warning: cast between incompatible function types from ‘ssize_t (*)(vfs_node_t *, uint32_t,  size_t,  uint8_t *)’ {aka ‘int (*)(struct vfs_node *, unsigned int,  unsigned int,  unsigned char *)’} to ‘ssize_t (*)(vfs_node_t *, uint32_t,  void *, size_t)’ {aka ‘int (*)(struct vfs_node *, unsigned int,  void *, unsigned int)’} [-Wcast-function-type]
  599 |         out_node->read = (read_type_t)fat32_read;
      |                          ^
make: *** [Makefile:89: build/obj/fs/fat32.o] Error 1
